[gd_scene load_steps=8 format=2]

[ext_resource path="res://resources/theme-submenu.tres" type="Theme" id=1]
[ext_resource path="res://scenes/ui-bits/Submenu.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/menus/settings/Settings.gd" type="Script" id=3]
[ext_resource path="res://scenes/ui-bits/Alert.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/menus/settings/KeyPopup.tscn" type="PackedScene" id=6]
[ext_resource path="res://scenes/ui-bits/FullAlert.tscn" type="PackedScene" id=8]

[sub_resource type="StyleBoxEmpty" id=20]
content_margin_left = 10.0

[node name="Settings" instance=ExtResource( 2 )]
script = ExtResource( 3 )
auto_select = NodePath("Content/ScrollContainer/Options/Back")

[node name="Title" parent="Content" index="0"]
custom_styles/normal = SubResource( 20 )
text = "settings"

[node name="ScrollContainer" type="ScrollContainer" parent="Content" index="1"]
margin_top = 85.0
margin_right = 520.0
margin_bottom = 730.0
size_flags_horizontal = 3
size_flags_vertical = 3
follow_focus = true
scroll_horizontal_enabled = false

[node name="Options" type="VBoxContainer" parent="Content/ScrollContainer" index="0"]
unique_name_in_owner = true
margin_right = 499.0
margin_bottom = 1725.0
size_flags_horizontal = 3
custom_constants/separation = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Back" type="Button" parent="Content/ScrollContainer/Options" index="0"]
margin_right = 499.0
margin_bottom = 39.0
text = "Back"

[node name="Graphics" type="Label" parent="Content/ScrollContainer/Options" index="1"]
margin_top = 59.0
margin_right = 499.0
margin_bottom = 115.0
theme = ExtResource( 1 )
theme_type_variation = "SeparatorLabel"
text = "Graphics"

[node name="AntiAliasing" type="CheckButton" parent="Content/ScrollContainer/Options" index="2"]
margin_top = 135.0
margin_right = 499.0
margin_bottom = 179.0
text = "Anti-Aliasing (smoothens out sharp lines w/ MSAA 8x)"

[node name="Bloom" type="CheckButton" parent="Content/ScrollContainer/Options" index="3"]
margin_top = 199.0
margin_right = 499.0
margin_bottom = 243.0
text = "Bloom (makes bright parts of the screen glow)"

[node name="LensDistortion" type="CheckButton" parent="Content/ScrollContainer/Options" index="4"]
margin_top = 263.0
margin_right = 499.0
margin_bottom = 307.0
text = "Lens Distortion (simulates a lens at a cost to performance)"

[node name="Shockwaves" type="CheckButton" parent="Content/ScrollContainer/Options" index="5"]
margin_top = 327.0
margin_right = 499.0
margin_bottom = 371.0
text = "Shockwaves (makes explosions look cooler)"

[node name="VSync" type="CheckButton" parent="Content/ScrollContainer/Options" index="6"]
margin_top = 391.0
margin_right = 499.0
margin_bottom = 435.0
text = "VSync (resolves screen tearing)"

[node name="Fullscreen" type="CheckButton" parent="Content/ScrollContainer/Options" index="7"]
margin_top = 455.0
margin_right = 499.0
margin_bottom = 499.0
text = "Fullscreen mode"

[node name="FrameCounter" type="CheckButton" parent="Content/ScrollContainer/Options" index="8"]
margin_top = 519.0
margin_right = 499.0
margin_bottom = 563.0
text = "Frame counter (FPS indicator in the top left)"

[node name="FPSLimit" type="HBoxContainer" parent="Content/ScrollContainer/Options" index="9"]
margin_top = 583.0
margin_right = 499.0
margin_bottom = 622.0

[node name="Title" type="Label" parent="Content/ScrollContainer/Options/FPSLimit" index="0"]
margin_top = 10.0
margin_right = 367.0
margin_bottom = 29.0
mouse_default_cursor_shape = 16
size_flags_horizontal = 3
text = "FPS Limit"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OptionButton" type="OptionButton" parent="Content/ScrollContainer/Options/FPSLimit" index="1"]
margin_left = 371.0
margin_right = 499.0
margin_bottom = 39.0
rect_min_size = Vector2( 128, 0 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "60"
items = [ "25", null, false, 25, null, "30", null, false, 30, null, "45", null, false, 45, null, "50", null, false, 50, null, "60", null, false, 60, null, "75", null, false, 75, null, "120", null, false, 120, null, "144", null, false, 144, null, "Unlimited", null, false, 0, null ]
selected = 4

[node name="PhysicsFPS" type="HBoxContainer" parent="Content/ScrollContainer/Options" index="10"]
margin_top = 642.0
margin_right = 499.0
margin_bottom = 681.0

[node name="Title" type="Label" parent="Content/ScrollContainer/Options/PhysicsFPS" index="0"]
margin_top = 10.0
margin_right = 367.0
margin_bottom = 29.0
mouse_default_cursor_shape = 16
size_flags_horizontal = 3
text = "Physics FPS Limit"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OptionButton" type="OptionButton" parent="Content/ScrollContainer/Options/PhysicsFPS" index="1"]
margin_left = 371.0
margin_right = 499.0
margin_bottom = 39.0
rect_min_size = Vector2( 128, 0 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "60"
items = [ "30", null, false, 30, null, "40", null, false, 40, null, "50", null, false, 50, null, "60", null, false, 60, null ]
selected = 3

[node name="Gameplay" type="Label" parent="Content/ScrollContainer/Options" index="11"]
margin_top = 701.0
margin_right = 499.0
margin_bottom = 757.0
theme = ExtResource( 1 )
theme_type_variation = "SeparatorLabel"
text = "Gameplay"

[node name="Difficulty" type="HBoxContainer" parent="Content/ScrollContainer/Options" index="12"]
margin_top = 777.0
margin_right = 499.0
margin_bottom = 816.0
custom_constants/separation = 10

[node name="Title" type="Label" parent="Content/ScrollContainer/Options/Difficulty" index="0"]
margin_top = 10.0
margin_right = 361.0
margin_bottom = 29.0
mouse_default_cursor_shape = 16
size_flags_horizontal = 3
text = "Difficulty"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OptionButton" type="OptionButton" parent="Content/ScrollContainer/Options/Difficulty" index="1"]
margin_left = 371.0
margin_right = 499.0
margin_bottom = 39.0
rect_min_size = Vector2( 128, 0 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Medium"
items = [ "Easy", null, false, 0, null, "Medium", null, false, 1, null, "Hard", null, false, 2, null, "Nightmare", null, false, 3, null, "Ultranightmare", null, false, 4, null, "CARNAGE", null, false, 5, null ]
selected = 1

[node name="Accessibility" type="Label" parent="Content/ScrollContainer/Options" index="13"]
margin_top = 836.0
margin_right = 499.0
margin_bottom = 892.0
theme = ExtResource( 1 )
theme_type_variation = "SeparatorLabel"
text = "Accessibility"

[node name="BackgroundMovement" type="HBoxContainer" parent="Content/ScrollContainer/Options" index="14"]
margin_top = 912.0
margin_right = 499.0
margin_bottom = 940.0
custom_constants/separation = 10

[node name="Title" type="Label" parent="Content/ScrollContainer/Options/BackgroundMovement" index="0"]
margin_top = 4.0
margin_right = 139.0
margin_bottom = 23.0
text = "Background Speed"

[node name="HSlider" type="HSlider" parent="Content/ScrollContainer/Options/BackgroundMovement" index="1"]
margin_left = 149.0
margin_right = 446.0
margin_bottom = 28.0
size_flags_horizontal = 3
max_value = 2.0
step = 0.1
value = 1.0

[node name="Hint" type="Label" parent="Content/ScrollContainer/Options/BackgroundMovement" index="2"]
margin_left = 456.0
margin_top = 4.0
margin_right = 499.0
margin_bottom = 23.0
text = "(x 1.0)"

[node name="Sound" type="Label" parent="Content/ScrollContainer/Options" index="15"]
margin_top = 960.0
margin_right = 499.0
margin_bottom = 1016.0
theme = ExtResource( 1 )
theme_type_variation = "SeparatorLabel"
text = "Sound"

[node name="MusicVolume" type="HBoxContainer" parent="Content/ScrollContainer/Options" index="16"]
margin_top = 1036.0
margin_right = 499.0
margin_bottom = 1064.0
custom_constants/separation = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Content/ScrollContainer/Options/MusicVolume" index="0"]
margin_top = 4.0
margin_right = 233.0
margin_bottom = 23.0
size_flags_horizontal = 3
text = "Music Volume"

[node name="HSlider" type="HSlider" parent="Content/ScrollContainer/Options/MusicVolume" index="1"]
margin_left = 243.0
margin_right = 499.0
margin_bottom = 28.0
rect_min_size = Vector2( 256, 0 )
step = 10.0
value = 100.0

[node name="SFXVolume" type="HBoxContainer" parent="Content/ScrollContainer/Options" index="17"]
margin_top = 1084.0
margin_right = 499.0
margin_bottom = 1112.0
custom_constants/separation = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Content/ScrollContainer/Options/SFXVolume" index="0"]
margin_top = 4.0
margin_right = 233.0
margin_bottom = 23.0
size_flags_horizontal = 3
text = "Sound Effects Volume"

[node name="HSlider" type="HSlider" parent="Content/ScrollContainer/Options/SFXVolume" index="1"]
margin_left = 243.0
margin_right = 499.0
margin_bottom = 28.0
rect_min_size = Vector2( 256, 0 )
step = 10.0
value = 100.0

[node name="Input" type="Label" parent="Content/ScrollContainer/Options" index="18"]
margin_top = 1132.0
margin_right = 499.0
margin_bottom = 1188.0
theme = ExtResource( 1 )
theme_type_variation = "SeparatorLabel"
text = "Input"

[node name="InputKeys" type="VBoxContainer" parent="Content/ScrollContainer/Options" index="19"]
unique_name_in_owner = true
margin_top = 1208.0
margin_right = 499.0
margin_bottom = 1483.0
custom_constants/separation = 20

[node name="Up" type="HBoxContainer" parent="Content/ScrollContainer/Options/InputKeys" index="0"]
margin_right = 499.0
margin_bottom = 39.0
custom_constants/separation = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="Content/ScrollContainer/Options/InputKeys/Up" index="0"]
margin_top = 10.0
margin_right = 361.0
margin_bottom = 29.0
size_flags_horizontal = 3
text = "Move Up/Select Previous Option"

[node name="Key" type="Button" parent="Content/ScrollContainer/Options/InputKeys/Up" index="1"]
margin_left = 371.0
margin_right = 499.0
margin_bottom = 39.0
rect_min_size = Vector2( 128, 0 )
custom_colors/font_color = Color( 1, 1, 1, 0.784314 )
text = "Up"

[node name="Left" type="HBoxContainer" parent="Content/ScrollContainer/Options/InputKeys" index="1"]
margin_top = 59.0
margin_right = 499.0
margin_bottom = 98.0
rect_pivot_offset = Vector2( -702.202, -279 )
custom_constants/separation = 10

[node name="Title" type="Label" parent="Content/ScrollContainer/Options/InputKeys/Left" index="0"]
margin_top = 10.0
margin_right = 361.0
margin_bottom = 29.0
size_flags_horizontal = 3
text = "Move Left"

[node name="Key" type="Button" parent="Content/ScrollContainer/Options/InputKeys/Left" index="1"]
margin_left = 371.0
margin_right = 499.0
margin_bottom = 39.0
rect_min_size = Vector2( 128, 0 )
custom_colors/font_color = Color( 1, 1, 1, 0.784314 )
text = "Left"

[node name="Down" type="HBoxContainer" parent="Content/ScrollContainer/Options/InputKeys" index="2"]
margin_top = 118.0
margin_right = 499.0
margin_bottom = 157.0
custom_constants/separation = 10

[node name="Title" type="Label" parent="Content/ScrollContainer/Options/InputKeys/Down" index="0"]
margin_top = 10.0
margin_right = 361.0
margin_bottom = 29.0
size_flags_horizontal = 3
text = "Move Down/Select Next Option"

[node name="Key" type="Button" parent="Content/ScrollContainer/Options/InputKeys/Down" index="1"]
margin_left = 371.0
margin_right = 499.0
margin_bottom = 39.0
rect_min_size = Vector2( 128, 0 )
custom_colors/font_color = Color( 1, 1, 1, 0.784314 )
text = "Down"

[node name="Right" type="HBoxContainer" parent="Content/ScrollContainer/Options/InputKeys" index="3"]
margin_top = 177.0
margin_right = 499.0
margin_bottom = 216.0
custom_constants/separation = 10

[node name="Title" type="Label" parent="Content/ScrollContainer/Options/InputKeys/Right" index="0"]
margin_top = 10.0
margin_right = 361.0
margin_bottom = 29.0
size_flags_horizontal = 3
text = "Move Right"

[node name="Key" type="Button" parent="Content/ScrollContainer/Options/InputKeys/Right" index="1"]
margin_left = 371.0
margin_right = 499.0
margin_bottom = 39.0
rect_min_size = Vector2( 128, 0 )
custom_colors/font_color = Color( 1, 1, 1, 0.784314 )
text = "Right"

[node name="Laser" type="HBoxContainer" parent="Content/ScrollContainer/Options/InputKeys" index="4"]
margin_top = 236.0
margin_right = 499.0
margin_bottom = 275.0
custom_constants/separation = 10

[node name="Title" type="Label" parent="Content/ScrollContainer/Options/InputKeys/Laser" index="0"]
margin_top = 10.0
margin_right = 361.0
margin_bottom = 29.0
size_flags_horizontal = 3
text = "Shoot/Confirm"

[node name="Key" type="Button" parent="Content/ScrollContainer/Options/InputKeys/Laser" index="1"]
margin_left = 371.0
margin_right = 499.0
margin_bottom = 39.0
rect_min_size = Vector2( 128, 0 )
custom_colors/font_color = Color( 1, 1, 1, 0.784314 )
text = "Space"

[node name="ApplyBindings" type="Button" parent="Content/ScrollContainer/Options" index="20"]
margin_top = 1503.0
margin_right = 499.0
margin_bottom = 1542.0
text = "Apply key binds"
align = 0

[node name="MouseSensitivity" type="HBoxContainer" parent="Content/ScrollContainer/Options" index="21"]
margin_top = 1562.0
margin_right = 499.0
margin_bottom = 1590.0
custom_constants/separation = 10

[node name="Title" type="Label" parent="Content/ScrollContainer/Options/MouseSensitivity" index="0"]
margin_top = 4.0
margin_right = 133.0
margin_bottom = 23.0
text = "Mouse Sensitivity"

[node name="HSlider" type="HSlider" parent="Content/ScrollContainer/Options/MouseSensitivity" index="1"]
margin_left = 143.0
margin_right = 446.0
margin_bottom = 28.0
size_flags_horizontal = 3
max_value = 2.0
step = 0.1
value = 1.0

[node name="Hint" type="Label" parent="Content/ScrollContainer/Options/MouseSensitivity" index="2"]
margin_left = 456.0
margin_top = 4.0
margin_right = 499.0
margin_bottom = 23.0
text = "(x 1.0)"

[node name="DangerZone" type="Label" parent="Content/ScrollContainer/Options" index="22"]
margin_top = 1610.0
margin_right = 499.0
margin_bottom = 1666.0
theme = ExtResource( 1 )
theme_type_variation = "SeparatorLabel"
text = "Dangerous Options"

[node name="ResetGame" type="Button" parent="Content/ScrollContainer/Options" index="23"]
margin_top = 1686.0
margin_right = 499.0
margin_bottom = 1725.0
custom_colors/font_color_focus = Color( 1, 0.356863, 0.356863, 1 )
custom_colors/font_color = Color( 1, 0.27451, 0.27451, 1 )
custom_colors/font_color_hover = Color( 1, 0.458824, 0.458824, 1 )
custom_colors/font_color_pressed = Color( 1, 0.352941, 0.352941, 1 )
text = "Reset all data"

[node name="KeyPopup" parent="." index="3" instance=ExtResource( 6 )]
visible = false

[node name="ResetConfirmation" parent="." index="4" instance=ExtResource( 8 )]
visible = false

[node name="Alert" parent="." index="5" instance=ExtResource( 4 )]

[connection signal="pressed" from="Content/ScrollContainer/Options/Back" to="." method="_on_Back_pressed"]
[connection signal="toggled" from="Content/ScrollContainer/Options/AntiAliasing" to="." method="_on_AntiAliasing_toggled"]
[connection signal="toggled" from="Content/ScrollContainer/Options/Bloom" to="." method="_on_Bloom_toggled"]
[connection signal="toggled" from="Content/ScrollContainer/Options/LensDistortion" to="." method="_on_LensDistortion_toggled"]
[connection signal="toggled" from="Content/ScrollContainer/Options/Shockwaves" to="." method="_on_Shockwaves_toggled"]
[connection signal="toggled" from="Content/ScrollContainer/Options/VSync" to="." method="_on_VSync_toggled"]
[connection signal="toggled" from="Content/ScrollContainer/Options/Fullscreen" to="." method="_on_Fullscreen_toggled"]
[connection signal="toggled" from="Content/ScrollContainer/Options/FrameCounter" to="." method="_on_FrameCounter_toggled"]
[connection signal="item_selected" from="Content/ScrollContainer/Options/FPSLimit/OptionButton" to="." method="_on_FPSLimit_OptionButton_item_selected"]
[connection signal="item_selected" from="Content/ScrollContainer/Options/PhysicsFPS/OptionButton" to="." method="_on_PhysicsFPS_OptionButton_item_selected"]
[connection signal="item_selected" from="Content/ScrollContainer/Options/Difficulty/OptionButton" to="." method="_on_Difficulty_OptionButton_item_selected"]
[connection signal="value_changed" from="Content/ScrollContainer/Options/BackgroundMovement/HSlider" to="." method="_on_BackgroundMovement_HSlider_value_changed"]
[connection signal="value_changed" from="Content/ScrollContainer/Options/MusicVolume/HSlider" to="." method="_on_MusicVolume_HSlider_value_changed"]
[connection signal="value_changed" from="Content/ScrollContainer/Options/SFXVolume/HSlider" to="." method="_on_SFXVolume_HSlider_value_changed"]
[connection signal="pressed" from="Content/ScrollContainer/Options/InputKeys/Up/Key" to="." method="_map_up_key"]
[connection signal="pressed" from="Content/ScrollContainer/Options/InputKeys/Left/Key" to="." method="_map_left_key"]
[connection signal="pressed" from="Content/ScrollContainer/Options/InputKeys/Down/Key" to="." method="_map_down_key"]
[connection signal="pressed" from="Content/ScrollContainer/Options/InputKeys/Right/Key" to="." method="_map_right_key"]
[connection signal="pressed" from="Content/ScrollContainer/Options/InputKeys/Laser/Key" to="." method="_map_shoot_key"]
[connection signal="pressed" from="Content/ScrollContainer/Options/ApplyBindings" to="." method="_on_ApplyBindings_pressed"]
[connection signal="value_changed" from="Content/ScrollContainer/Options/MouseSensitivity/HSlider" to="." method="_on_MouseSensitivity_HSlider_value_changed"]
[connection signal="pressed" from="Content/ScrollContainer/Options/ResetGame" to="." method="_on_ResetGame_pressed"]
[connection signal="key_set" from="KeyPopup" to="." method="_on_KeyPopup_key_set"]
[connection signal="confirmed" from="ResetConfirmation" to="." method="_on_ResetConfirmation_confirmed"]
